      it is referenced by other troves on your system but not installed.
    * Changeset generation across distributed shadows now force file 
      information to be absolute instead of relative when the files are on
      different servers, eliminating server crosstalk on source checkin and
      when committing local changesets. (bz #1033)

  o Server Changes:
    * Removed the ability for the server to log updates to its contents
      store (mirroring has made this capability obsolete)
    * logFile configuration directive now logs all XML calls
    * Split user management out from core authorization object
    * All user management calls are based on user and group names now
    * The user management web interface for the repository now allows
      the administrator to enable and disable mirroring for groups

  o Bug Fixes:
    * Conary will not traceback if you try to update to a trove with a name
      that matches a filesystem path that you don't have access to (bz #1010).
    * Conary will not raise an exception if a standard config file (~/.conaryrc,
      for example) exists but is not accessible.
    * cvc no longer allows . and .. to be added to source troves (bz #1014)
    * cvc remove handles removing directories (bz #1014)
    * conary rollback no longer tracebacks if you do not have write access to
      the conary database.
    * deeply shadowed versions would fail when performing some version 
      operations.  This caused, for example, local cooks of shadowed troves
      to fail.
    * using loadInstalled with a multiarch trove no longer tracebacks (bz #1039)
    * group recipes that include a trove explicitly byDefault False could result
      in a trove when cooked that had the components of that trove byDefault
      True.
    * Stop sending duplicate Host: headers, proxies (at least squid) mangle 
      these into one host header, causing failures when accessing rbuilder
      repositories that depend on that host header (bz #795)